2002-09-18  Werner Koch  <wk@gnupg.org>

	* ath.h: Prefix ath_deinit.

2002-09-17  Werner Koch  <wk@gnupg.org>

	* benchmark.c: New.
	(mpi_bench, do_powm): Add a a simple test for RSA.

	* global.c (global_init): New.  Use it instead of the setting
	any_init_done.  Initialize the ATH system.
	(gcry_check_version): Hook global_init in.  This is the suggested
	way to initialize the library.
	(_gcry_no_internal_locking): Removed.  We simply call a ath_deinit
	and leave it to ATH to disbale the locking.

	* ath.c, ath.h, ath-pth.c, ath-pthread.c: New. Taken from GPGME.
	* mutex.h: Removed.
	* Makefile.am (ath_components): New.

2002-09-16  Werner Koch  <wk@gnupg.org>

	* secmem.c (_gcry_secmem_dump_stats): Replaced fprintf by log_*.

2002-08-23  Werner Koch  <wk@gnupg.org>

	* missing-string.c: Removed unneeded strlwr.

	* libgcrypt.m4: Made much more simple.
	* libgcrypt-config.in: Made --prefix work for --libs.

2002-08-14  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Add GCRY_CIPGER_DES.  Included string.h for size_t.
	Suggested by Simon Josefsson.

2002-07-25  Werner Koch  <wk@gnupg.org>

	* cipher.h: Added prototypes for progress functions.
	* global.c: Include cipher.h for those prototypes.

	* stdmem.c (_gcry_private_realloc): Replaced void* by char * for
	pointer arithmetic reasons.  Noted by Stephan Austermuehle.

2002-06-24  Werner Koch  <wk@gnupg.org>

	* missing-string.c: Include ctype.h.

	* gcrypt.h (gcry_mpi_invm, gcry_mpi_div, gcry_mpi_mod)
	(gcry_mpi_swap): New.

2002-06-18  Werner Koch  <wk@gnupg.org>

	* gcrypt.h: Added a bunch of brief function descriptions.

2002-05-21  Werner Koch  <wk@gnupg.org>

	* misc.c (_gcry_log_printf): Don't initialize a va_list.  Noted by
	Jeff Johnson.

	* global.c (gcry_set_progress_handler): New.

	* gcrypt.h: Replaced the typedef for byte.

2002-05-16  Werner Koch  <wk@gnupg.org>

	* missing-string.c: New.

	* gcrypt.h: Add new error codes GCRYERR_SEXP_ and typedefs