@@ -1,3 +1,9 @@
+2002-09-20  Werner Koch  <wk@gnupg.org>
+
+	* ath.c: Include sys.time.h if sys/select.h does not exist.
+	(ath_select, ath_waitpid): Shortcut for Windows.
+	* ath.h: Include some Windows headers.  By Timo.
+
 2002-09-18  Werner Koch  <wk@gnupg.org>
 
 	* ath.h: Prefix ath_deinit.
